bugfix/WY-375 apply display table to all image alignments except full alignment

--- a/src/common/scss/blocks/wordpress/_gallery.scss
+++ b/src/common/scss/blocks/wordpress/_gallery.scss
@@ -68,13 +68,12 @@
 }
 
 .wp-block-image {
-	&.aligncenter {
-		display: table !important;
-	}
 
-	.aligncenter {
+	//not alignfull
+	&:not(.alignfull) {
 		display: table !important;
 	}
+	
 }
 
 .wp-caption {
